Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-133605

Bubblewrap plugin is not handling bwrap option order correctly

XMLWordPrintable

    • 66e521dfd (dev), 8793a5586 (6.9), f383ea47c (6.8)

      Due to the nature of the bubblewrap-plugin parsing and converting the found options, users are unable to specify the –size option used in conjuction with the –tmpfs option.

      With the following config most of the time a

      bwrap: --size must be followed by --tmpfs

      error is thrown, as the option order is not guaranteed by the implementation. 

      This problem might also affect the –perms option as it is also required to be ahead to the option affecting (E.g. –bind-data or –file)

       

      ...
        bubblewrap:
          sharedNamespaces: [ '-all' ]
          configuration:
              symlink:
                  usr/lib: '/lib'
                  usr/lib64: '/lib64'
                  usr/bin: [ '/bin', '/sbin' ]
              ro-bind:
                  /usr/bin : '/usr/bin'
                  /usr/lib : '/usr/lib'
                  /etc : '/etc'
                  /usr/share/fonts : '/usr/share/fonts'
                  /usr/share/fontconfig : '/usr/share/fontconfig'
                  /sys/dev/char : '/sys/dev/char'
                  '/sys/devices/pci0000:00' : '/sys/devices/pci0000:00'
                  /usr/share/X11/xkb : '/usr/share/X11/xkb'
              ro-bind-try:
                  /run/NetworkManager/no-stub-resolv.conf : '/run/systemd/resolve/stub-resolv.conf'
                  /usr/lib64 : '/usr/lib64'
                  /usr/share/glvnd/egl_vendor.d : '/usr/share/glvnd/egl_vendor.d'
              bind:
                  /tmp/browser_pki: '/home/browser'
              dev: '/dev'
              dev-bind:
                  /dev/dri : '/dev/dri'
              size:
                  '33554432'
              tmpfs:
                  /tmp
              proc:
                  /proc
              setenv:
                  'HOME': '/home/browser'
                  'QTWEBENGINE_REMOTE_DEBUGGING': '0.0.0.0:12000'
      ...

        For Gerrit Dashboard: QTBUG-133605
        # Subject Branch Project Status CR V

            rgriebl Robert Griebl
            frank.bargstedt Frank Bargstedt
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes