Convert bwrap configuration from an unordered into an ordered map

This is necessary, because some bwrap command line options are position
dependent in relation to other options.

Old, unordered configurations are still accepted, but a warning is
printed that a conversion is needed.

Change-Id: Id24a1836c7568422767c0f9ed54e65101abd0b64
Fixes: QTBUG-133605
Reviewed-by: Dominik Holland <dominik.holland@qt.io>
(cherry picked from commit 66e521dfde52244287992f5117d504bbb82d6f30)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 8793a5586bd6b75c4aa03de29f8cbfeeede79e00)